syntax = "proto3";

package org.apache.flink.formats.parquet.protobuf;
message SimpleProtoRecord {
  string foo = 1;
  string bar = 2;
  int32 num = 3;
}
