/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package tutorial;

import "google/protobuf/timestamp.proto";

option java_package = "org.apache.flink.formats.protobuf.test";

message PhoneNumber {
  string number = 1;
  string type = 2;
}

message Person {
  string name = 1;
  int32 id = 2;
  string email = 3;

  repeated PhoneNumber phone_numbers = 4;

  enum Moods {
    happy = 0;
    sad = 1;
    hungry = 2;
  }

  Moods Mood = 5;

  oneof ContactInfo {
    PhoneNumber primary_phone = 6;
    string primary_email = 7;
  }

  // Intentionally capitalized to test that ProtoTypeInfo can locate
  // the corresponding Java field
  repeated string Nicknames = 8;

  google.protobuf.Timestamp last_updated = 9;

  string __metadata__ = 10;

  PhoneNumber previous_phone_number = 11;
}
